# TrueVoice

./: .env.example  .gitignore  README.md
.agents/rules/: rules.md
.github/workflows/: build-and-test.yml
apps/dashboard/: package-lock.json  package.json
apps/dashboard/src/: App.css  App.tsx
apps/dashboard/src-tauri/: Cargo.toml  tauri.conf.json
apps/dashboard/src-tauri/src/: main.rs
docs/: Vishing Detection Agent PRD.md
services/ai-agent/: main.py
services/audio-capture/: CMakeLists.txt
services/audio-capture/src/: main.cpp
services/inference-stt/: main.py  pyproject.toml
